DEPRECIATED/jellyfin_deployment/jellyfin-external-iot.yaml
apiVersion: v1
kind: Service
metadata:
  name: jellyfin-external-iot
  namespace: media  #namespace: default # Or your namespace
  annotations:
    metallb.io/address-pool: vlan-iot
spec:
  selector:
    app: jellyfin # This label should match your Deployment's pod labels
  ports:
    - protocol: TCP
      port: 80       # External port for the Service (what you connect to)
      targetPort: 8096 # Internal port of the container deployment
      name: http
    - protocol: TCP
      port: 443      # External HTTPS port (if you set up HTTPS)
      targetPort: 8920 # Internal HTTPS port; if applicable. 
      name: https
  type: LoadBalancer 
  loadBalancerIP: 192.168.50.29 # target IP for the service.
# test to see if can direct to container deployment without specifing the port.
